--- a/front/css/style.css
+++ b/front/css/style.css
@@ -2,8 +2,8 @@
 
 :root {
   --color-primary: #f00a2d;
-  --color-secondary: #f44336;
-  --color-tertiary: #ffeb3b;
+  --color-secondary: #66131f;
+  --color-tertiary: #ff3a85;
   --color-background: #1c1a1a;
   --color-text-primary: #eaeaea;
 }
@@ -28,16 +28,99 @@ body {
 .row {
   display: flex;
   flex-direction: row;
+  gap: 5px;
 }
 
 .column {
   display: flex;
   flex-direction: column;
-}
-
-.login-main {
+  gap: 5px;
 }
 
 .side-container {
-  height: 10px;
+  transition: 0.5s;
+  max-width: 900px;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--color-primary);
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.side-content {
+  width: 100%;
+  max-width: 500px;
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  transition: 0.5s;
+}
+
+.regTrans {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.classic-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.classic-form div {
+  gap: 10px;
+}
+
+.classic-form label {
+  font-size: 18px;
+}
+
+.classic-form input {
+  background-color: var(--color-secondary);
+  border: none;
+  padding: 15px;
+  border-radius: 5px;
+  transition: 0.3s;
+  cursor: pointer;
+  color: white;
+}
+
+.classic-form input::placeholder {
+  color: white;
+  opacity: 0.5;
+}
+
+.classic-form input:focus {
+  outline: 3px solid rgba(255, 255, 255, 0.486);
+  border: none;
+  cursor: text;
+  filter: brightness(0.8);
+
+}
+
+.classic-form input:hover {
+  filter: brightness(1.2);
+}
+
+.classic-form button {
+  border: none;
+  font-size: 20px;
+  background-color: white;
+  align-self: start;
+  padding: 15px 30px 15px 30px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: 700;
+  color: var(--color-primary);
+  transition: 0.4s;
+  width: 40%;
+  margin-top: 10px;
+}
+
+.classic-form button:hover {
+  width: 100%;
+  box-shadow: 0px 0px 30px white;
 }
