--- a/front/css/style.css
+++ b/front/css/style.css
@@ -137,10 +137,11 @@ body {
   filter: saturate(0);
   min-height: 100vh;
   height: inherit;
-  /* max-height: 100vh;
-  width: 55vi; */
+  max-height: 100vh;
+  width: 55vi;
   transition: 0.5s;
   opacity: 0;
+  background-color: red;
 }
 
 .passInput {
